--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="col-lg-6 col-md-12">
     <div class="row ">
     <div class="col-lg-5 mt-2  ">
-      <img src="information-orientation.jpg" width="65%"></div>
+      <img src="information-orientation.jpg" width="63%"></div>
       <div class="col-lg-7 align-content-center  "><p1 class="para3"><h4>Orientation date</h4>
         Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
       </p>      
@@ -90,7 +90,7 @@
     </div>
     <div class="row">
       <div class="col-lg-5 mt-2 ">
-        <img src="information-main.jpg " width="65%"></div>
+        <img src="information-campus.jpg" width="63%"></div>
         <div class="col-lg-7 align-content-center"><p1 class="para3"><h4>Orientation date</h4>
           Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
         </p>      
@@ -99,7 +99,7 @@
       </div>
       <div class="row bg-light">
         <div class="col-lg-5 mt-2 ">
-          <img src="information-guest-lecture.jpg" width="65%" ></div>
+          <img src="information-guest-lecture.jpg" width="63%" ></div>
           <div class="col-lg-7 align-content-center"><p1 class="para3"><h4>Orientation date</h4>
             Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
           </p>      
@@ -110,11 +110,11 @@
 
          
          <!-- third section-->
-      <div class="container-fluid bg-light" > 
-       <div class="row">
+      <div class=" coursec container-fluid bg-light mt-5  " > 
+       <div class="row" >
         <div class=" my col ">Start Learning</div>
        </div>
-        <div class="row">
+        <div class="row  ">
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card mb-5 shadow-sm">
               <img src="course-software.jpg" class="img-fluid" />
@@ -220,15 +220,15 @@
 
       <!-- fourth section-->
       <section>
-      <div class="container-fluid bg-white">
-        <div class="row">
-          <div class="col-lg-6 col-md-12  "><video width="500"  controls><source src="thesis.mp4"></video>
+      <div class="  container-fluid bg-white ">
+        <div class="row p-5">
+          <div class="col-lg-6 col-md-12  "><video width="600"  controls><source src="thesis.mp4"></video>
             <h3><b>Reimagine urban</b></h3>
             <p class="para1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>
             nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>
             eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             </div> 
-          <div class="col-lg-6 col-md-12">
+          <div class="col-lg-6 col-md-12  ">
             <div class="row ">
             <div class="col-lg-5 mt-2  ">
               <img src="thesis-fisma.jpg" width="65%"></div>
@@ -248,11 +248,11 @@
 
           </section>
 <!-- fivth section-->
-<div class="container-fluid"></div>
+<div class="container"></div>
 <div class="row">
-  <div class="col-10">    @ 2016 Colmar Academy All rights reserved</div>
-  <div class="col-1">Terms</div>
-  <div class="col-1">Privacy</div>
+  <div class="col-6">    @ 2016 Colmar Academy All rights reserved</div>
+  <div class="col-6 text-end">Terms  Privacy</div>
+  
 </div>
 
       
