--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
           </nav>
        
-          <div class="row bg-light container-fluid ">
+          <div class="row bg-light container-fluid  ">
            <div class=" main  col-sm col-md col-lg col-xl" ><img class="imgg" src="banner.jpg" ></div>
            <div class=" first col-sm col-md col-lg col-xl" ><h1>Learn something</h1>
           <h2>new everyday</h2>
@@ -73,7 +73,7 @@
 <section>
   <div class="container-fluid bg-white">
 <div class="row">
-  <div class="col-lg-6 col-md-12 mt-2"><img class="img1" src="information-main.jpg " width="100%">
+  <div class="col-lg-6 col-md-12 mt-2 hiding"><img class="img1" src="information-main.jpg " width="100%">
     <h3><b>it doesn't hurt to keep practising</b></h3>
     <p class="para1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>
     nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>
@@ -248,12 +248,14 @@
 
           </section>
 <!-- fivth section-->
-<div class="container"></div>
-<div class="row">
-  <div class="col-6">    @ 2016 Colmar Academy All rights reserved</div>
-  <div class="col-6 text-end">Terms  Privacy</div>
-  
-</div>
+<section>
+  <div class="container-fluid">
+    <div class="row ">
+      <div class="col-6">@ 2016 Colmar Academy All rights reserved</div>
+      <div class="col-6 text-end">Terms Privacy</div>
+    </div>
+  </div>
+</section>
 
       
 
