--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 <section>
   <div class="container-fluid bg-white">
 <div class="row">
-  <div class="col-lg-6 col-md-12 mt-2 hiding"><img class="img1" src="information-main.jpg " width="100%">
+  <div class="col-lg-6 col-md-12 col-sm-12 mt-2 hiding"><img class="img1" src="information-main.jpg " width="100%">
     <h3><b>it doesn't hurt to keep practising</b></h3>
     <p class="para1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>
     nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>
     eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
     <p class="para2">Emanuel, Sr.Sratageist at Hiring.com</p></div> 
-  <div class="col-lg-6 col-md-12">
+  <div class="col-lg-6 col-md-12 col-sm-12">
     <div class="row ">
-    <div class="col-lg-5 mt-2  ">
+    <div class="col-lg-5 col-md-12 col-sm-12  mt-2  ">
       <img src="information-orientation.jpg" width="63%"></div>
       <div class="col-lg-7 align-content-center  "><p1 class="para3"><h4>Orientation date</h4>
         Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
@@ -89,7 +89,7 @@
     </div>
     </div>
     <div class="row">
-      <div class="col-lg-5 mt-2 ">
+      <div class="col-lg-5 col-md-12 col-sm-12  mt-2 ">
         <img src="information-campus.jpg" width="63%"></div>
         <div class="col-lg-7 align-content-center"><p1 class="para3"><h4>Orientation date</h4>
           Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
@@ -98,9 +98,9 @@
         
       </div>
       <div class="row bg-light">
-        <div class="col-lg-5 mt-2 ">
+        <div class="col-lg-5 col-md-12 col-sm-12  mt-2 ">
           <img src="information-guest-lecture.jpg" width="63%" ></div>
-          <div class="col-lg-7 align-content-center"><p1 class="para3"><h4>Orientation date</h4>
+          <div class="col-lg-7col-md-12 col-sm-12  align-content-center"><p1 class="para3"><h4>Orientation date</h4>
             Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
           </p>      
         </div>
@@ -112,7 +112,7 @@
          <!-- third section-->
       <div class=" coursec container-fluid bg-light mt-5  " > 
        <div class="row" >
-        <div class=" my col ">Start Learning</div>
+        <div class=" my col col-md-12 col-sm-12 ">Start Learning</div>
        </div>
         <div class="row  ">
           <div class="col-lg-4 col-md-6 col-sm-12">
@@ -222,25 +222,25 @@
       <section>
       <div class="  container-fluid bg-white ">
         <div class="row p-5">
-          <div class="col-lg-6 col-md-12  "><video width="600"  controls><source src="thesis.mp4"></video>
+          <div class="col-lg-6 col-md-12 col-sm-12   "><video width="600"  controls><source src="thesis.mp4"></video>
             <h3><b>Reimagine urban</b></h3>
             <p class="para1">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>
             nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>
             eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             </div> 
-          <div class="col-lg-6 col-md-12  ">
+          <div class="col-lg-6 col-md-12 col-sm-12   ">
             <div class="row ">
-            <div class="col-lg-5 mt-2  ">
+            <div class="col-lg-5 col-md-12 col-sm-12  mt-2  ">
               <img src="thesis-fisma.jpg" width="65%"></div>
-              <div class="col-lg-7 align-content-center  "><p1 class="para3"><h4>Orientation date</h4>
+              <div class="col-lg-7 col-md-12 col-sm-12  align-content-center  "><p1 class="para3"><h4>Orientation date</h4>
                 Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
               </p>      
             </div>
             </div>
             <div class="row bg-light">
-              <div class="col-lg-5 mt-2 ">
+              <div class="col-lg-5 col-md-12 col-sm-12  mt-2 ">
                 <img src="thesis-now-and-then.jpg " width="65%"></div>
-                <div class="col-lg-7 align-content-center"><p1 class="para3"><h4>Orientation date</h4>
+                <div class="col-lg-7 col-md-12 col-sm-12  align-content-center"><p1 class="para3"><h4>Orientation date</h4>
                   Tue 10/11 & Wed 10/12: 8am-3pm<br> <a href="">Read More</a>
                 </p>      
               </div>
@@ -251,8 +251,8 @@
 <section>
   <div class="container-fluid">
     <div class="row ">
-      <div class="col-6">@ 2016 Colmar Academy All rights reserved</div>
-      <div class="col-6 text-end">Terms Privacy</div>
+      <div class="col-6 col-md-12 col-sm-12 ">@ 2016 Colmar Academy All rights reserved</div>
+      <div class="col-6 col-md-12 col-sm-12  text-end">Terms Privacy</div>
     </div>
   </div>
 </section>
